force-app/main/default/email_log_auditor/objects/LogScheduleConfig__mdt/LogScheduleConfig__mdt.object-meta.xml
<CustomObject>
    <label>Log Schedule Config</label>
    <pluralLabel>Log Schedule Configs</pluralLabel>
</CustomObject>