force-app/main/default/email_log_auditor/objects/LogScheduleConfig__mdt/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <label>Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>