force-app/main/default/email_log_auditor/objects/LogScheduleConfig__mdt/fields/DayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>DayOfWeek__c</fullName>
    <label>Day of Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Monday</fullName><default>true</default><label>Monday</label></value>
            <value><fullName>Tuesday</fullName><default>false</default><label>Tuesday</label></value>
            <value><fullName>Wednesday</fullName><default>false</default><label>Wednesday</label></value>
            <value><fullName>Thursday</fullName><default>false</default><label>Thursday</label></value>
            <value><fullName>Friday</fullName><default>false</default><label>Friday</label></value>
            <value><fullName>Saturday</fullName><default>false</default><label>Saturday</label></value>
            <value><fullName>Sunday</fullName><default>false</default><label>Sunday</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>