force-app/main/default/email_log_auditor/objects/LogScheduleConfig__mdt/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>