force-app/main/default/email_log_auditor/objects/LogScheduleConfig__mdt/fields/IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>