force-app/main/default/email_log_auditor/objects/LogScheduleConfig__mdt/fields/LastRunDatetime__c.field-meta.xml
<CustomField>
    <fullName>LastRunDatetime__c</fullName>
    <label>Last Run Datetime</label>
    <type>DateTime</type>
</CustomField>