force-app/main/default/email_log_auditor/objects/LogScheduleConfig__mdt/fields/NextRunDatetime__c.field-meta.xml
<CustomField>
    <fullName>NextRunDatetime__c</fullName>
    <label>Next Run Datetime</label>
    <type>DateTime</type>
</CustomField>