force-app/main/default/email_log_auditor/objects/LogScheduleConfig__mdt/fields/RequestDirection__c.field-meta.xml
<CustomField>
    <fullName>RequestDirection__c</fullName>
    <description>Email direction to include in the log request. Maps to the Direction field on the Salesforce Email Log Request form. Defaults to Outbound.</description>
    <label>Request Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Outbound</fullName><default>true</default><label>Outbound</label></value>
            <value><fullName>Inbound</fullName><default>false</default><label>Inbound</label></value>
            <value><fullName>Both</fullName><default>false</default><label>Both</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>