force-app/main/default/email_log_auditor/objects/LogScheduleConfig__mdt/fields/RequestEmailFilter__c.field-meta.xml
<CustomField>
    <fullName>RequestEmailFilter__c</fullName>
    <description>Optional comma-delimited list of email addresses or domains to filter the log request (maps to the Search String field on the Salesforce Email Log Request form). Leave blank for no filter.</description>
    <label>Request Email Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>