force-app/main/default/email_log_auditor/objects/LogScheduleConfig__mdt/fields/RequestMode__c.field-meta.xml
<CustomField>
    <fullName>RequestMode__c</fullName>
    <description>Controls whether the scheduler submits an email log request before the download sweep. Off = download-only (spec-001 behavior). PreviousDay = request past 24 hours. CustomWindow = request using RequestWindowHours__c hours. Null is treated as Off for backward compatibility.</description>
    <label>Request Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Off</fullName><default>true</default><label>Off</label></value>
            <value><fullName>PreviousDay</fullName><default>false</default><label>Previous Day (24 h)</label></value>
            <value><fullName>CustomWindow</fullName><default>false</default><label>Custom Window</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>