force-app/main/default/email_log_auditor/objects/LogScheduleConfig__mdt/fields/RequestTimeoutHours__c.field-meta.xml
<CustomField>
    <fullName>RequestTimeoutHours__c</fullName>
    <description>Number of hours after which a Requested EmailLogFile__c row is considered timed out and transitioned to RequestTimedOut by resolveTimedOutRequests(). Defaults to 2. Salesforce typically generates log files within 30 minutes; 2 hours provides a generous buffer.</description>
    <label>Request Timeout Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>