force-app/main/default/email_log_auditor/objects/LogScheduleConfig__mdt/fields/RequestWindowHours__c.field-meta.xml
<CustomField>
    <fullName>RequestWindowHours__c</fullName>
    <description>Number of hours back from job execution time to include in the log request when RequestMode__c = CustomWindow. Valid range 1–168. Ignored when RequestMode__c is Off or PreviousDay. Defaults to 24.</description>
    <label>Request Window Hours</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>