force-app/main/default/email_log_auditor/objects/LogScheduleConfig__mdt/fields/RunTime__c.field-meta.xml
<CustomField>
    <fullName>RunTime__c</fullName>
    <label>Run Time (UTC HH:MM)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>